--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </head>
     <body class="flex">
         <button class="start">СТАРТ</button>
-
+мир
         <div id="game-container">
             <div id="info">
               <span class="info-span">Вопрос <span id="q-number"></span> из <span id="q-all"></span></span>
